[package]
authors = ["madetara <x@madetara.dev>"]
edition = "2021"
name = "nyisnear"
publish = false
readme = "README.md"
repository = "https://github.com/madetara/nyisnear"
version = "0.1.0"

[[bin]]
bench = false
name = "nyisnear"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = "1.7"
byteorder = "1.3"
bytes = "1.3"
chrono = "0.4"
image = "0.24"
image_hasher = "1.1"
lazy_static = "1.4"
rand = "0.8"
regex = "1.4"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
] }
teloxide = { version = "0.11", features = ["macros", "webhooks-axum"] }
thiserror = "1.0"

tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.3"

tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "sync"] }
